# AI_Fitness_Tracker

./: AIEngine.cpp  AIEngine.h  AIRecommendationsGUI.cpp  AIRecommendationsGUI.h  APIClient.cpp  APIClient.h  CMakeLists.txt  CardioWorkout.cpp  CardioWorkout.h  FitnessTrackerGUI.cpp  FitnessTrackerGUI.h  GUI.cpp  GUI.h  NormalWorkout.cpp  NormalWorkout.h  README.md  UserProfile.cpp  UserProfile.h  UserProfileGUI.cpp  UserProfileGUI.h  Workout.cpp  Workout.h  WorkoutGUI.cpp  WorkoutGUI.h  WorkoutHistoryGUI.cpp  WorkoutHistoryGUI.h  WorkoutManager.h  main.cpp
